[package]
name = "flavortown_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
dotenvy = "0.15.7"
envy = "0.4.2"
once_cell = "1.21.3"
reqwest = { version = "0.12.24", features = ["blocking"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = "0.27.2"
strum_macros = "0.27.2"
